--- a/index2.html
+++ b/index2.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="so">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Webkaaga</title>
 </head>
-
 <body>
-
+    <header>
+        <h1>Ku soo dhawoow Webkaaga</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+    <section>
+        <h2>Qaybta Wararka</h2>
+        <p>Halkan waxaad ku dari kartaa waxyaabaha cusub.</p>
+    </section>
+    <footer>
+        <p>&copy; 2024 Webkaaga. Dhammaan xuquuqda way xifdisan tahay.</p>
+    </footer>
 </body>
-
 </html>
