--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <section id="home">
-        <h2>Ku soo dhawoow Thame Meadow</h2>
+        <h2>Ku soo dhawoow zudays shoping</h2>
         <p>Meel ganacsi oo furan, loogu talagalay adeegyadaada.</p>
     </section>
 
