--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Thame Meadow</h1>
+        <h1>zudays shoping</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
