--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id="about">
         <h2>Nagu Saabsan</h2>
-        <p>Thame Meadow waa xarun ganacsi oo bixisa adeegyo kala duwan.</p>
+        <p>zudays shoping waa xarun ganacsi oo bixisa adeegyo kala duwan.</p>
     </section>
 
     <section id="services">
@@ -50,7 +50,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Thame Meadow. Dhamaan xuquuqda way xifdisan yihiin.</p>
+        <p>&copy; 2024 zudays shoping. Dhamaan xuquuqda way xifdisan yihiin.</p>
     </footer>
 
     <script src="script.js"></script>
