--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>zudays shoping</title>
+    <style>
+    body {
+   background-image: url("gallery1.jpg");
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-attachment:fixed;
+    }
+  
+    </style>
+    
+    
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>zudays shoping</h1>
+        <h1>zudays wadi cabe</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
