--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-        <h1>zudays wadi cabe</h1>
+        <h1>zudays shoping</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
