--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
     <section id="about">
         <h2>Nagu Saabsan</h2>
+        <h1>waxaan ahay arday barta dugdsiga dhexe hoose ee wiil waal</h1>
         <p>zudays shoping waa xarun ganacsi oo bixisa adeegyo kala duwan.</p>
     </section>
 
