--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body>
-  <img src="sude/logo.png" alt="sudays of Logo" class="logo">
+  <img src="sude/logo.png" alt="sudays ali of Logo" class="logo">
   </body>
     <header>
         <h1>zudays shoping</h1>
